Tue May  6 04:31:48 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* file.c (rb_f_test): removed meaningless "case 'a'".

Tue May  6 01:28:14 2014  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (OpenURI.open_uri): Call StringIO#close only if
	  the StringIO object is not closed yet.
	  Reported by Jordi Massaguer Pla.  [ruby-core:42538] [Bug #6010]

Tue May  6 01:08:01 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: define File::NULL if not defiend and /dev/null
	  is available to run benchmark driver on ruby 1.9.2.

Mon May  5 23:53:24 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: Add IP_TRANSPARENT.
	  IP_TRANSPARENT is provieded since glibc-2.12.
	  Reported by Eliezer Croitoru.  [ruby-core:50372] [Bug #7476]

Mon May  5 22:29:47 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (check_exec_redirect): Open the file in write mode for
	  redirect from [:out, :err].
	  Proposed and implemented by Yusuke Endoh.
	  [ruby-dev:41430] [Feature #3348]

Mon May  5 21:52:35 2014  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/lib/pathname.rb (cleanpath_aggressive): make all
	  separators File::SEPARATOR from File::ALT_SEPARATOR.
	  Reported by Daniel Rikowski.
	  Fixed by Nobuyoshi Nakada.  [Bug #9618]

	* ext/pathname/lib/pathname.rb (cleanpath_conservative): ditto.

Mon May  5 21:48:04 2014  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/lib/pathname.rb (Pathname#/): Aliased to Pathname#+.
	  Suggested by Alexey Muranov.  [ruby-core:61432] [Feature #9625]

Mon May  5 17:26:09 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* math.c (rb_math_sqrt): omitted exporting an unused function,
	  anyway.
	* internal.h: follows the above change.

Mon May  5 11:44:03 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.strptime): Raise ArgumentError if Date._strptime
	  doesn't extract date information.
	  Reported by tadayoshi funaba.  [ruby-core:62349]

Mon May  5 01:12:27 2014  Tadayoshi Funaba  <tadf@dotrb.org>
